<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="term_of_use">Пользовательское соглашение</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share_link" translatable="false">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="mail_to_support_subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="mail_to_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="developer_email_address" translatable="false">v4lievil@yandex.ru</string>
    <string name="link_to_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_search">Ничего не нашлось</string>
    <string name="error_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clean_history">Очистить историю</string>
    <string name="recent_searches">Вы искали</string>
    <string name="added_to_recent_searches">добавлено в историю поиска</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="time_placeholder" translatable="false">00:00</string>
    <string name="country">Страна</string>
    <string name="library_button_image">Кнопка добавить в медиатеку</string>
    <string name="play_button_image">Кнопка играть песню</string>
    <string name="pause_button_image">Кнопка поставить на паузу песню</string>
    <string name="like_button_image">Кнопка нравиться</string>
    <string name="album_cover_image">Обложка альбома</string>
    <string name="back_button_image">Кнопка назад</string>
    <string name="select_image">Вабрать</string>
    <string name="support_image">Написать в поддержку</string>
    <string name="share_image">Поделиться</string>
    <string name="image_of_back_button">image_of_back_button</string>
    <string name="error">Ошибка</string>
    <string name="Point">Точка</string>
    <string name="cant_play_song">Не удается воспроизвести песню</string>
    <string name="player_not_ready">Плеер загружается, пожалуйста подождите</string>
    <string name="error_network">Проблемы со связью. Прроверьте подключение к сети</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="error_no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="error_favorites_is_empty">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_name_created">Плейлист %1s создан</string>
    <string name="playlist">Плейлист</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="count_track">%1$d трек</string>
    <string name="count_tracks">%1$d треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Трек добавлен в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в данный плейлист</string>
    <string name="cannot_save_image">Не удалось сохранить изображение</string>
    <string name="cannot_create_playlist">Не удалось создать плейлист</string>


    <plurals name="tracks_plural">
        <item quantity="zero"> %1$d треков</item>
        <item quantity="one"> %1$d трек</item>
        <item quantity="two"> %1$d трека </item>
        <item quantity="few"> %1$d трека </item>
        <item quantity="many"> %1$d треков</item>
        <item quantity="other"> %1$d треков</item>
    </plurals>

    <plurals name="minute_plural">
        <item quantity="zero"> %1$d минут</item>
        <item quantity="one"> %1$d минута</item>
        <item quantity="two"> %1$d минуты </item>
        <item quantity="few"> %1$d минуты </item>
        <item quantity="many"> %1$d минут</item>
        <item quantity="other"> %1$d минут</item>
    </plurals>

    <string name="delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="share_playlist_error">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_playlist">Хотите удалить плейлист «%1s»?</string>
    <string name="yes_delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_have_no_tracks">В этом плейлисте нет треков</string>
</resources>