<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetMenuLinearLayout"
    style="@style/BottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="383dp"
    android:clickable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:src="@drawable/bottom_sheet_rectangle_draw" />

    <include
        android:id="@+id/playlist_view"
        layout="@layout/playlist_small_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12" />

    <TextView
        android:id="@+id/shareTextView"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_29"
        android:layout_marginBottom="@dimen/margin_21"
        android:text="@string/share" />

    <TextView
        android:id="@+id/editInfoTextView"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_21"
        android:layout_marginBottom="@dimen/margin_21"
        android:text="@string/edit_info" />

    <TextView
        android:id="@+id/deletePlaylistTextView"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_21"
        android:layout_marginBottom="@dimen/margin_21"
        android:text="@string/delete_playlist_title" />
</LinearLayout>
