<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbar_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iconBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_to_dark_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="@id/text_dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_dark_theme" />

    <TextView
        android:id="@+id/text_share_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/text_dark_theme" />

    <ImageView
        android:id="@+id/image_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/share"
        android:src="@drawable/share"
        app:layout_constraintBottom_toBottomOf="@id/text_share_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share_app" />

    <TextView
        android:id="@+id/text_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:text="@string/write_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/text_share_app" />

    <ImageView
        android:id="@+id/image_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/share"
        android:src="@drawable/support"
        app:layout_constraintBottom_toBottomOf="@id/text_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_support" />

    <TextView
        android:id="@+id/text_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/yandex_sans_display_regular"
        android:text="@string/term_of_use"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toBottomOf="@id/text_support" />

    <ImageView
        android:id="@+id/image_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/term_of_use"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="@id/text_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_term" />

</androidx.constraintlayout.widget.ConstraintLayout>