<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createPlaylist.ui.fragments.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineStart"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/main_margin_for_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineEnd"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineSecondStart"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLineSecondEnd"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_24" />

    <ImageView
        android:id="@+id/backImageView"
        style="@style/ArrowBackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_image_margin"
        android:layout_marginTop="@dimen/title_image_margin"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/back_button_image"
        app:layout_constraintEnd_toStartOf="@+id/toolbarPlaylist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolbarPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/title_text_margin_top"
        android:text="@string/new_playlist"
        android:textAppearance="@style/TitleText"
        app:layout_constraintStart_toEndOf="@+id/backImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/coverCardView"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginTop="@dimen/margin_42"
        app:cardCornerRadius="@dimen/corner_radius_8dp"
        app:cardElevation="@dimen/zero_dp"
        app:layout_constraintBottom_toTopOf="@id/playlistNameTextLayout"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guidLineSecondEnd"
        app:layout_constraintStart_toStartOf="@+id/guidLineSecondStart"
        app:layout_constraintTop_toBottomOf="@+id/toolbarPlaylist">

        <ImageView
            android:id="@+id/coverImageView"
            style="@style/PlaylistCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle_rounded_dashed"
            android:scaleType="center"
            android:src="@drawable/add_photo" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistNameTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="@dimen/weight_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:hint="@string/playlist_name_hint"
        app:boxStrokeColor="@color/box_stroke_color_selector_grey"
        app:hintTextColor="@color/box_stroke_color_selector_blue"
        app:layout_constraintBottom_toTopOf="@id/playlistDescriptionTextLayout"
        app:layout_constraintEnd_toStartOf="@+id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@+id/coverCardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistNameEditText"
            style="@style/InputBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlistDescriptionTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
        android:layout_width="@dimen/weight_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:hint="@string/playlist_description_hint"
        app:boxStrokeColor="@color/box_stroke_color_selector_grey"
        app:hintTextColor="@color/box_stroke_color_selector_blue"
        app:layout_constraintBottom_toTopOf="@id/buttonCreateImageView"
        app:layout_constraintEnd_toStartOf="@+id/guidLineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidLineStart"
        app:layout_constraintTop_toBottomOf="@+id/playlistNameTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlistDescriptionEditText"
            style="@style/InputBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/buttonCreateImageView"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_for_button_create"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_for_button_create"
        android:layout_marginBottom="@dimen/bottom_margin_for_button_create"
        android:background="@drawable/button_create"
        android:gravity="center"
        android:padding="@dimen/padding_for_create_button_text"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistDescriptionTextLayout"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>